# fractal

./: CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: annotated.html  classes.html  classfractal_1_1Dummy.html  classfractal_1_1Dummy__coll__graph.map  classfractal_1_1Module-members.html  classfractal_1_1Module.html  classfractal_1_1Module__coll__graph.map  classfractal_1_1Module__coll__graph.md5  classfractal_1_1Module__inherit__graph.map  classfractal_1_1Module__inherit__graph.md5  classfractal_1_1Module_abc2bf9795de848ecef0bd2e339a81e0d_cgraph.map  classfractal_1_1Module_abc2bf9795de848ecef0bd2e339a81e0d_cgraph.md5  classfractal_1_1System-members.html  classfractal_1_1System.html  classfractal_1_1System__coll__graph.map  classfractal_1_1System__coll__graph.md5  classfractal_1_1System__inherit__graph.map  classfractal_1_1System__inherit__graph.md5  classfractal_1_1System_a69dd1513fed01dd3cf455763bd243f5e_cgraph.map  classfractal_1_1System_a69dd1513fed01dd3cf455763bd243f5e_cgraph.md5  classfractal_1_1System_ae1da12b267d3fe5b811e4130ae888b50_cgraph.md5  classfractal_1_1System_ae1da12b267d3fe5b811e4130ae888b50_icgraph.map  classfractal_1_1System_ae1da12b267d3fe5b811e4130ae888b50_icgraph.md5  classfractal_1_1baggage-members.html  classfractal_1_1baggage.html  classfractal_1_1baggage__admin-members.html  classfractal_1_1baggage__admin.html  (+54 more)
doc/latex/: Makefile  annotated.tex  (+60 more)
example/: makefile  system_test  system_test.cpp  wav_test  wav_test.cpp
examples/: makefile  time_test  time_test.cpp  write.cpp
include/: Doxyfile  fractal.h
src/: fractal.cpp  makefile
(+42 files in other folders)
